20041014 .cvsignore, Makefile.am, autogen.sh, configure.in, ui/gtk/.cvsignore,
         ui/gtk/Makefile.am: Use libtool to link Fuse and libuigtk, sorts out
         transitive dependencies when gtk (and probably libspectrum) is
         installed in a non-default directory. Fixes build of UNIX version on
         Mac OS X.
20041014 ui/scaler/scalers.c: Fix typo.
20041014 man/fuse.1: Add documentation of --full-screen command line option.
20041019 man/fuse.1: Quote '-'s for UTF-8 environments (Darren).
20041019 widget/widget.c: Add dummy ui_get_rollback_point function.
20041024 rzx.c,timer.[ch],hacking/input.txt,sound/Makefile.am,
         sound/{sdlsound.c,sfifo.[ch]},ui/gtk/gtkui.c,widget/widget.c:
         Sort out time problems with compo mode RZX recordings being aborted,
         add OSS-style latency to timer mode, remove sound glitches in SDL.
20041025 joystick.[ch],settings.dat,snapshot.c,ui/{options.dat,ui.h},
         ui/gtk/gtkui.c,widget/widget.c: Add support for filing joystick
         connection in snapshots, need to implement GTK+ and widget dialogs
         so users can reconfig joysticks on snap loading. Switch Sinclair
         joysticks to match Sinclair documentation and other emulators.
20041025 timer.c: Use proper machine interrupt rate (e.g. 48k uses 50.08Hz).
20041025 hacking/input.txt: Fix typo.
20041029 rzx.c,ui.c,ui/ui.h,ui/gtk/gtkui.c,widget/widget.c: (de)activate
	 rollback menu items appropriately.
20041031 .cvsignore,z80/.cvsignore: ignore .libs directories.
20041006 settings.dat: make RZX files be compressed by default.
20041006 machine.c,menu.c,menu_data.c,trdos.c,ui.c,machines/specplus3.c,
	 man/fuse.1,ui/ui.h: split the Media/Disk menu into separate +3 and
	 TR-DOS entries.
20041006 display.c,menu.[ch],menu_data.c,screenshot.[ch],ui.c,ui/ui.h,
	 man/fuse.1,ui/gtk/gtkui.c,widget/{menu.c,widget.c}: add ability to
	 save 'movies' as collections of screenshots (Gergely Szasz).