@@ -341,6 +341,17 @@ AC_CHECK_LIB( png, png_write_png,
 )
 AC_SUBST(PNG_LIBS)
 
+dnl Check if a version of libao which supplies ao_open_live is available
+AC_CHECK_LIB( ao, ao_open_live,
+  [AC_CHECK_HEADER(
+    ao/ao.h,
+    [AC_DEFINE([USE_LIBAO], 1, [Defined if we're going to be using the installed libao]) AO_LIBS='-lao'],
+    [AC_MSG_WARN(ao/ao.h not found - no libao sound output)]
+  )],
+  [AC_MSG_WARN(ao_open_live not found - no libao sound output)]
+)
+AC_SUBST(AO_LIBS)
+
 dnl Are we supplying the ROMs or relying on another package?
 AC_MSG_CHECKING(where to find the Spectrum ROM images)
 AC_ARG_WITH(roms-dir,
