@@ -1105,3 +1105,5 @@
 20041006 display.c,menu.[ch],menu_data.c,screenshot.[ch],ui.c,ui/ui.h,
 	 man/fuse.1,ui/gtk/gtkui.c,widget/{menu.c,widget.c}: add ability to
 	 save 'movies' as collections of screenshots (Gergely Szasz).
+20041013 AUTHORS,Makefile.am,THANKS,configure.in,sound/{Makefile.am,
+	 aosound.c,lowlevel.h}: add ao sound driver (Gergely Szasz).
